--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
 name: cdk list
 
-on: [ push ]
-#on:
-#  pull_request:
-#   types: [opened, edited]
+#on: [ push ]
+on:
+  pull_request:
+   types: [opened, edited]
 
 jobs:
   build:
